[FIX]_할인율뱃지 z-index 값 수정

--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -44,7 +44,7 @@
           text-align: center;
           top: 10px;
           right: 10px;
-          z-index: 1000;
+          z-index: 90;
           font-size: 2rem;
           background: url('../images/thumb_badge.png') no-repeat center center;
         }
